# PyML

./: .gitignore  pyproject.toml  xy.ipynb  xy_regression.ipynb
pyml/: mlp.py  supervision.py  transform.py  util.py
pyml/ds/: __init__.py  generic.py  util.py  xy.py  xyz.py
tests/: test_mlp.py
