[tool.poetry]
name = "pyml"
version = "0.1.0"
description = ""
authors = ["Tyler Curtis Jowers <jowerstc@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
rich = "^13.9.4"
ipywidgets = "7.7.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
